  * Windows size is now persistent (Closes #77)
  * Added the possibility to make the web UI of the local agent
    accessible and to store default settings (Closes #83)
  * Implemented random per session credentials (Closes #67)
  * Fixed broken open SyncArchive and Folder when folder name
    contains spaces (Closes #85)
  * Added specific icons for paused and connecting state

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 02 Mar 2014 15:33:21 +0100

btsync-gui (0.6-1) unstable; urgency=low

  * Folder status now takes in account and shows folder errors
    (Closes #72)
  * Show the device status on the "Devices" tab (Closes #73)

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 02 Mar 2014 15:33:21 +0100

btsync-gui (0.5-1) unstable; urgency=low

  * Added support for libindicator3 in order to support
    desktops like Unity (Closes #69)
  * Added authentication by default in autogenerated config file.
    This is far from what we really should do but at least a
    little step in the right direction.
  * Logging is now also written to ${HOME}/.btsync/btsync-gui.log
    (Closes #70)
  * Fixed broken representation of special characters in folder
    names (Closes #71)
  * Split package in btsync-user-gtk (without dependencies to
    gir1.2-appindicator3-0.1) for usage on systems with a GTK
    based shell and btsync-user (that depends on btsync-user-gtk
    and gir1.2-appindicator3-0.1) for systems with shells that
    need libappindicator like Unity

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 01 Mar 2014 13:44:59 +0100

btsync-gui (0.4-1) unstable; urgency=low

  * Implemented folder add routine (Closes #63)
  * Implemented folder context menu with
    - Copy secret
    - Connect mobile device
    - Open Syncarchive
    - Open shared folder on double click
    - Show folder preferences
  * Implemented editing of folder preferences (Closes #64):
    - Change the folder secret
    - Change all folder settings
