@@ -11,6 +11,9 @@ btsync-gui (0.7-1) unstable; urgency=low
   * Fixed broken open SyncArchive and Folder when folder name
     contains spaces (Closes #85)
   * Added specific icons for paused and connecting state
+  * Cyclic status updates are now dynamically adapted to the
+    system and conncetion performance avoiding API flooding
+    (Closes #88)
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sun, 02 Mar 2014 15:33:21 +0100
 
